Fix distance offset and angle estimation

--- a/notebooks/WallAnalysis.ipynb
+++ b/notebooks/WallAnalysis.ipynb
@@ -34,7 +34,7 @@
    "source": [
     "from simulation import get_setup\n",
     "\n",
-    "distance = 5\n",
+    "distance = 15\n",
     "azimuths = [0, 15, 30]\n",
     "\n",
     "fig, ax = plt.subplots()\n",
@@ -123,6 +123,7 @@
    "outputs": [],
    "source": [
     "from wall_detector import prune_df_matrix\n",
+    "\n",
     "df_matrix_raw, df_dist, df_freq_raw = wall_detector.get_df_matrix()\n",
     "df_matrix, df_freq, indices = prune_df_matrix(\n",
     "    df_matrix_raw, df_freq_raw, verbose=True\n",
@@ -229,8 +230,9 @@
    "outputs": [],
    "source": [
     "# distance slice algorithm\n",
-    "from inference import get_approach_angle_fft\n",
+    "from inference import get_approach_angle_fft, get_gamma_distribution\n",
     "from plotting_tools import plot_performance, save_fig\n",
+    "from estimators import get_estimate\n",
     "\n",
     "EPS = 1e-10\n",
     "gt_gamma = 90 # in degrees\n",
@@ -239,34 +241,23 @@
     "    \n",
     "    d_slices = fill_nans(df_matrix[:, i, :], df_dist)\n",
     "    \n",
-    "    plt.figure()\n",
+    "    fig, ax = plt.subplots()\n",
+    "    fig.set_size_inches(7, 5)\n",
     "    for mic_idx in range(df_matrix.shape[0]):\n",
     "        d_slice = d_slices[mic_idx]\n",
-    "        ratio, prob = get_approach_angle_fft(d_slice, f, df_dist,\n",
-    "                                             n_max=1000, bayes=False)\n",
+    "        ratios, prob = get_approach_angle_fft(d_slice, f, df_dist,\n",
+    "                                             n_max=1000, bayes=False, reduced=False)\n",
+    "        gammas, prob = get_gamma_distribution(ratios, prob, factor=1.9)\n",
+    "        gamma = get_estimate(gammas, prob)\n",
     "        \n",
-    "        factor = 2 # TODO(FD): in practice, this depends on wall angle and distance. \n",
-    "        \n",
-    "        sin_gamma = ratio / factor\n",
-    "        \n",
-    "        #prob[sin_gamma > 1] = 0\n",
-    "        plt.plot(sin_gamma, prob)\n",
-    "        \n",
-    "        sin_max = sin_gamma[np.argmax(prob)]\n",
-    "        if sin_max <= 1:\n",
-    "            gamma = np.arcsin(sin_max) * 180 / np.pi\n",
-    "        elif sin_max <= 1 + EPS:\n",
-    "            gamma = 90\n",
-    "        else:\n",
-    "            print('warning, invalid sine:', sin_max)\n",
-    "            continue\n",
-    "        plt.axvline(sin_max, label=f'mic{mic_idx}: $\\\\gamma$={gamma:.1f}', color=f'C{mic_idx}')\n",
+    "        ax.plot(gammas, prob)\n",
+    "        ax.axvline(gamma, label=f'mic{mic_idx}: $\\\\gamma$={gamma:.1f}', color=f'C{mic_idx}')\n",
     "        err_dict[f\"mic{mic_idx}\"][i] = gamma - gt_gamma\n",
     "        \n",
-    "    plt.title(f'frequency {f:.0f}Hz')\n",
-    "    plt.xlabel('angle of approach $\\\\gamma$ [deg]')\n",
-    "    plt.ylabel('probability')\n",
-    "    #plt.legend()\n",
+    "    ax.set_title(f'frequency {f:.0f}Hz')\n",
+    "    ax.set_xlabel('angle of approach $\\\\gamma$ [deg]')\n",
+    "    ax.set_ylabel('probability')\n",
+    "    ax.legend()\n",
     "        \n",
     "fname = f\"{exp_name}_{motors}\"\n",
     "fig, axs = plot_performance(err_dict, xs=df_freq, \n",
@@ -327,7 +318,7 @@
     "\n",
     "chosen_mics = range(4)\n",
     "\n",
-    "distances_grid = np.arange(0, max(df_dist) + 1)\n",
+    "distances_grid = np.arange(min(df_dist), max(df_dist) + 1)\n",
     "distances_idx = np.argmin(np.abs(distances_grid[:, None] - df_dist[None, :]), axis=0)\n",
     "\n",
     "results = pd.DataFrame(columns=[\"normalization\", \"matrix\", \"values\"])\n",
@@ -453,7 +444,7 @@
     "\n",
     "err_df = pd.DataFrame(columns=['method', 'mic', 'distance', 'error', 'algorithm'])\n",
     "\n",
-    "distances_grid = np.arange(50)\n",
+    "distances_grid = np.arange(min(df_dist), max(df_dist))\n",
     "distances = df_dist\n",
     "mic_indices = range(4)\n",
     "n_mics = len(mic_indices)\n",
@@ -518,16 +509,16 @@
     "                        'algorithm': algo\n",
     "                    }\n",
     "                    \n",
-    "        #for method, distance_estimator in distance_estimators.items():\n",
-    "        #    distances_here, proba = distance_estimator.get_distance_distribution()\n",
-    "        #    d = get_estimate(distances_here, proba)\n",
-    "        #    err_df.loc[len(err_df), :] = {\n",
-    "        #        'error': d - distance,\n",
-    "        #        'mic': -1,\n",
-    "        #        'distance': distance,\n",
-    "        #        'method': method, \n",
-    "        #        'algorithm': 'bayes-combination' \n",
-    "        #    }"
+    "        for method, distance_estimator in distance_estimators.items():\n",
+    "            distances_here, proba = distance_estimator.get_distance_distribution()\n",
+    "            d = get_estimate(distances_here, proba)\n",
+    "            err_df.loc[len(err_df), :] = {\n",
+    "                'error': d - distance,\n",
+    "                'mic': -1,\n",
+    "                'distance': distance,\n",
+    "                'method': method, \n",
+    "                'algorithm': 'bayes-combination' \n",
+    "            }"
    ]
   },
   {
@@ -630,7 +621,7 @@
     "                    )\n",
     "                    distances_here = distances_grid\n",
     "                elif algo == \"bayes\":\n",
-    "                    distances_here, proba = get_probability_bayes(\n",
+    "                    distances_here, proba, diff = get_probability_bayes(\n",
     "                        slice_exp,\n",
     "                        freqs, \n",
     "                        mic_idx=mic_idx,\n",
@@ -946,55 +937,6 @@
     "    )\n",
     "    axs[0, m].set_title(f\"mic{m}\")\n",
     "    axs[0, m].legend(loc=\"lower right\")"
-   ]
-  },
-  {
-   "cell_type": "raw",
-   "metadata": {},
-   "source": [
-    "from wall_analysis import get_df_matrices, FILTERS\n",
-    "\n",
-    "#exp_name = \"2021_02_25_wall\"\n",
-    "exp_name = \"2021_02_23_wall\"\n",
-    "\n",
-    "fname = \"results/wall_analysis.pkl\"\n",
-    "# method = 'dryrun'\n",
-    "# method = 'new'\n",
-    "#method = 'replace'\n",
-    "method = \"read\"\n",
-    "\n",
-    "if method == \"read\":\n",
-    "    results_df = pd.read_pickle(fname)\n",
-    "elif method == \"replace\":\n",
-    "    from pandas_utils import fill_df\n",
-    "\n",
-    "    results_df = pd.read_pickle(fname)\n",
-    "\n",
-    "    print(\"read\", fname)\n",
-    "    results_df_new = get_df_matrices(exp_name)\n",
-    "\n",
-    "    for chosen_tuple, df in results_df_new.groupby(FILTERS):\n",
-    "        assert len(df) == 1\n",
-    "        row = df.iloc[0]\n",
-    "\n",
-    "        filter_dict = dict(zip(FILTERS, chosen_tuple))\n",
-    "        filter_dict.update({\"exp_name\": exp_name})\n",
-    "        fill_dict = {\n",
-    "            \"df_dist\": row.df_dist,\n",
-    "            \"df_freq\": row.df_freq,\n",
-    "            \"df_matrix\": row.df_matrix,\n",
-    "        }\n",
-    "        print(\"filling results_df_old...\")\n",
-    "        results_df = fill_df(results_df, filter_dict, fill_dict)\n",
-    "    pd.to_pickle(results_df, fname)\n",
-    "    print(\"saved as\", fname)\n",
-    "elif method == \"new\":\n",
-    "    results_df = get_df_matrices(exp_name)\n",
-    "    pd.to_pickle(results_df, fname)\n",
-    "    print(\"saved as\", fname)\n",
-    "elif method == \"dryrun\":\n",
-    "    results_df = get_df_matrices(exp_name, max_distance=10, plot=True)\n",
-    "results_df"
    ]
   },
   {
