--- a/notebooks/WallStudy.ipynb
+++ b/notebooks/WallStudy.ipynb
@@ -320,9 +320,6 @@
     "from geometry import get_deltas_from_global\n",
     "from geometry import get_orthogonal_distance_from_global\n",
     "\n",
-    "# distance_slices = [5, 10, 20, 30, 40, 50]\n",
-    "\n",
-    "\n",
     "min_frequency = 1000\n",
     "max_frequency = 5000\n",
     "n_freqs = 32\n",
@@ -342,14 +339,14 @@
     "print(\"max attainable distance:\", d)\n",
     "\n",
     "distance_slices = [30, d, 80]\n",
+    "sigmas = [0] + list(np.logspace(-3, 0, 4))\n",
     "#sigma_y = 1 # works with 1e-1, 1e-2: really good! with 1, it breaks down.\n",
-    "for sigma_y in [0] + list(np.logspace(-3, 0, 4)):\n",
+    "for sigma_y in sigmas:\n",
     "    size = (5, 7)\n",
     "    fig_all, axs = plt.subplots(len(distance_slices), sharey=True, sharex=True)\n",
     "    axs[0].set_title(\"frequency slices at different distances ($\\\\theta$=0)\")\n",
     "    fig_all.set_size_inches(*size)\n",
     "    for i, d in enumerate(distance_slices):\n",
-    "        idx = np.argmin(np.abs(distances - d))\n",
     "        slice_cont = get_freq_slice_theory(distance_cm=d, frequencies=freq_cont)[:, mic_idx]\n",
     "        slice_f = get_freq_slice_theory(distance_cm=d, frequencies=freq)[:, mic_idx]\n",
     "\n",
@@ -467,7 +464,7 @@
     "        ax.set_ylabel(\"probability [-]\")\n",
     "        ax.axvline(d * 100)\n",
     "        ax.set_title(chosen_mics)\n",
-    "        print(d*100 - distance_cm)\n",
+    "        print('error[cm]:', d*100 - distance_cm)\n",
     "        #assert np.abs(d * 100 - distance_cm) < 1e-3"
    ]
   },
@@ -585,7 +582,7 @@
    "outputs": [],
    "source": [
     "from simulation import get_df_theory_simple\n",
-    "nominal_distance = 10\n",
+    "nominal_distance = 30\n",
     "nominal_yaw = 0\n",
     "relative_distances = np.random.normal(0, 1, len(freq))\n",
     "absolute_yaws = np.random.normal(0, 1, len(freq))\n",
@@ -640,50 +637,56 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "metadata": {},
+   "metadata": {
+    "scrolled": false
+   },
    "outputs": [],
    "source": [
-    "from inference import get_approach_angle_fft\n",
+    "from inference import get_approach_angle_fft, get_gamma_distribution\n",
     "from simulation import factor_distance_to_delta\n",
     "azimuth_deg = 20\n",
     "n_methods = 2\n",
     "\n",
-    "gamma_deg = 30\n",
-    "\n",
     "frequency = 3000\n",
     "relative_distances_cm = np.arange(20, step=1.0)\n",
-    "start_distance_cm = 20\n",
+    "start_distance_cm = 50\n",
     "\n",
     "start_distances_grid = [start_distance_cm] #np.arange(40, 60)\n",
-    "gammas_grid = np.arange(91)\n",
     "n_max = 1000\n",
     "\n",
-    "distances_cm = start_distance_cm - relative_distances_cm * np.sin(\n",
-    "    gamma_deg / 180 * np.pi\n",
-    ")\n",
-    "for mic_idx in range(4):\n",
-    "    deltas_m, d0 = get_deltas_from_global(azimuth_deg, distances_cm, mic_idx)\n",
-    "\n",
-    "    slice_d = get_df_theory_simple(deltas_m, [frequency], flat=True, d0=d0)\n",
-    "\n",
-    "    gammas, probs, periods = get_approach_angle_fft(\n",
-    "        slice_d,\n",
-    "        frequency,\n",
-    "        relative_distances_cm,\n",
-    "        n_max=n_max,\n",
+    "for gamma_deg in np.arange(10, 91, step=10):\n",
+    "    distances_cm = start_distance_cm - relative_distances_cm * np.sin(\n",
+    "        gamma_deg / 180 * np.pi\n",
     "    )\n",
     "\n",
-    "    period_simple = 2 * frequency / SPEED_OF_SOUND\n",
-    "\n",
-    "    fig = plt.figure()\n",
-    "    plt.plot(periods/np.sin(gamma_deg/180*np.pi), \n",
-    "             probs, \n",
-    "             label='estimated', \n",
-    "             color='C0')\n",
-    "    plt.axvline(period_simple, label='simple', color='C1')\n",
+    "    fig, ax = plt.subplots()\n",
     "    fig.set_size_inches(5, 5)\n",
-    "    plt.title(f'mic{mic_idx}')\n",
-    "    plt.legend()"
+    "\n",
+    "    for mic_idx in range(4):\n",
+    "        deltas_m, d0 = get_deltas_from_global(azimuth_deg, distances_cm, mic_idx)\n",
+    "\n",
+    "        slice_d = get_df_theory_simple(deltas_m, [frequency], flat=True, d0=d0)\n",
+    "\n",
+    "        ratios, probs = get_approach_angle_fft(\n",
+    "            slice_d,\n",
+    "            frequency,\n",
+    "            relative_distances_cm,\n",
+    "            n_max=n_max,\n",
+    "        )\n",
+    "        gammas_deg, probs = get_gamma_distribution(ratios, probs)\n",
+    "        gamma_est = get_estimate(gammas_deg, probs)\n",
+    "\n",
+    "        ax.plot(\n",
+    "            gammas_deg, \n",
+    "            probs,\n",
+    "            label=f'mic{mic_idx}',\n",
+    "            color=f'C{mic_idx}'\n",
+    "        )\n",
+    "        ax.axvline(gamma_est, color=f'C{mic_idx}', ls=':')\n",
+    "    ax.axvline(gamma_deg, color='k', label='ground truth')\n",
+    "            \n",
+    "    plt.legend()\n",
+    "    plt.title(f'angle = {gamma_deg}deg')"
    ]
   },
   {
@@ -755,8 +758,8 @@
     "                n_max=n_max,\n",
     "                bayes=True,\n",
     "                sigma=None,\n",
+    "                reduced=True\n",
     "            )\n",
-    "            gamma_bayes = gammas_bayes[np.argmax(probs_bayes)]\n",
     "            gammas_bayes_sigma, probs_bayes_sigma = get_approach_angle_fft(\n",
     "                slice_d,\n",
     "                frequency,\n",
@@ -764,9 +767,8 @@
     "                n_max=n_max,\n",
     "                bayes=True,\n",
     "                sigma=sigma_y,\n",
+    "                reduced=True\n",
     "            )\n",
-    "            gamma_bayes_sigma = gammas_bayes_sigma[np.argmax(probs_bayes_sigma)]\n",
-    "\n",
     "            gammas_fft, probs_fft = get_approach_angle_fft(\n",
     "                slice_d,\n",
     "                frequency,\n",
@@ -774,9 +776,8 @@
     "                n_max=n_max,\n",
     "                bayes=False,\n",
     "                sigma=sigma_y,\n",
+    "                reduced=True\n",
     "            )\n",
-    "            gamma_fft = gammas_fft[np.argmax(probs_fft)]\n",
-    "\n",
     "            probs_cost = get_approach_angle_cost(\n",
     "                slice_d,\n",
     "                frequency,\n",
@@ -804,7 +805,7 @@
     "                gamma_idx = np.argmax(probs)\n",
     "                gamma_max = gammas[gamma_idx]\n",
     "                plt.plot(gammas, probs, label=method, color=f\"C{i}\", marker=\"o\")\n",
-    "                #plt.axvline(gamma_max, color=f\"C{i}\")\n",
+    "                plt.axvline(gamma_max, color=f\"C{i}\")\n",
     "                i += 1\n",
     "            plt.axvline(gamma_deg, color=\"black\", ls=\":\", label=\"real angle\")\n",
     "            plt.yscale(\"log\")\n",
@@ -835,29 +836,25 @@
    "source": [
     "from geometry import Context\n",
     "\n",
-    "d_arr = np.arange(5, 50, step=5) # cm\n",
-    "yaw_arr = np.arange(-180, 180) # deg\n",
+    "d_arr = np.arange(10, 50, step=5) # cm\n",
+    "azimuth_arr = np.arange(-180, 180) # deg\n",
     "\n",
     "mic_idx = 0\n",
-    "mics = np.c_[[0, 0,]].T # cm\n",
-    "source = np.r_[5, 0] # cm\n",
+    "mics = np.c_[[5e-2, 0,]].T # m\n",
+    "source = np.r_[0, 0] # m\n",
     "context = Context(2, mics, source)\n",
     "\n",
-    "delta_matrix = np.empty((len(yaw_arr), len(d_arr)))\n",
+    "delta_matrix = np.empty((len(azimuth_arr), len(d_arr)))\n",
     "for j, d in enumerate(d_arr):\n",
-    "    deltas = context.get_delta(yaw_arr, d, mic_idx)\n",
+    "    deltas = context.get_delta(azimuth_arr, d, mic_idx) * 100\n",
     "    delta_matrix[:, j] = deltas\n",
     "    \n",
-    "#for i, y in enumerate(yaw_arr):\n",
-    "#    deltas = context.get_delta(y, d_arr, mic_idx)\n",
-    "#    delta_matrix[i, :] = deltas\n",
-    "\n",
     "fig = plt.figure()\n",
     "fig.set_size_inches(5, 5)\n",
     "for j, d in enumerate(d_arr):\n",
-    "    plt.plot(yaw_arr, delta_matrix[:, j], label=f\"{d}cm\")\n",
-    "plt.xlabel(\"wall angle $\\\\beta$ [deg]\")\n",
-    "plt.ylabel(\"path difference $d_1-d_0$ [cm]\")\n",
+    "    plt.plot(azimuth_arr, delta_matrix[:, j], label=f\"{d}cm\")\n",
+    "plt.xlabel(\"wall angle $\\\\theta$ [deg]\")\n",
+    "plt.ylabel(\"path difference $r_1-r_0$ [cm]\")\n",
     "l = plt.legend(\n",
     "    bbox_to_anchor=[1.0, 1.0], loc=\"upper left\", title=\"orthogonal \\n distance $d$\"\n",
     ")\n",
@@ -875,28 +872,24 @@
     "from plotting_tools import save_fig\n",
     "\n",
     "delta_arr = np.arange(10, 100, step=10)\n",
-    "yaw_arr = np.arange(-180, 180)\n",
+    "azimuth_arr = np.arange(-180, 180)\n",
     "\n",
-    "d_matrix = np.empty((len(yaw_arr), len(delta_arr)))\n",
-    "\n",
-    "for j, delta in enumerate(delta_arr):\n",
-    "    ds = context.get_total_distance(delta, yaw_arr, mic_idx=0)\n",
-    "    d_matrix[:, j] = ds\n",
+    "d_matrix = np.empty((len(azimuth_arr), len(delta_arr)))\n",
     "    \n",
-    "for i, azimuth_deg in enumerate(yaw_arr):\n",
-    "    ds = context.get_total_distance(delta_arr, azimuth_deg, mic_idx=0)\n",
+    "for i, azimuth_deg in enumerate(azimuth_arr):\n",
+    "    ds = context.get_total_distance(delta_arr*1e-2, azimuth_deg, mic_idx=0) * 100\n",
     "    d_matrix[i, :] = ds\n",
     "    \n",
     "\n",
     "fig = plt.figure()\n",
     "fig.set_size_inches(5, 5)\n",
     "for j, d in enumerate(delta_arr):\n",
-    "    plt.plot(yaw_arr, d_matrix[:, j], label=f\"{d}cm\")\n",
-    "plt.xlabel(\"wall angle $\\\\beta$ [deg]\")\n",
+    "    plt.plot(azimuth_arr, d_matrix[:, j], label=f\"{d}cm\")\n",
+    "plt.xlabel(\"wall angle $\\\\theta$ [deg]\")\n",
     "plt.ylabel(\"orthogonal distance $d$ [cm]\")\n",
     "plt.grid(which=\"both\")\n",
     "l = plt.legend(\n",
-    "    bbox_to_anchor=[1.0, 1.0], loc=\"upper left\", title=\"path difference \\n $d_1 - d_0$\"\n",
+    "    bbox_to_anchor=[1.0, 1.0], loc=\"upper left\", title=\"path difference \\n $r_1 - r_0$\"\n",
     ")\n",
     "plt.setp(l.get_title(), multialignment=\"center\")\n",
     "save_fig(fig, \"plots/theory_distances.png\")"
@@ -935,28 +928,28 @@
     "\n",
     "mic_idx = 3\n",
     "frequencies = np.linspace(1000, 5000, 100)\n",
-    "distances_cm = np.arange(50, step=5)\n",
+    "distances_cm = np.arange(10, 50, step=5)\n",
     "azimuth_deg = np.arange(-180, 180)\n",
     "\n",
     "sigmas_distance = np.arange(20)\n",
-    "sigmas_yaw = np.arange(-180, 180)\n",
+    "sigmas_angle = np.arange(-180, 180)\n",
     "\n",
     "fig, axs = plt.subplots(1, 2, sharey=True)\n",
     "fig.set_size_inches(5, 5)\n",
-    "for d in distances_cm[:: len(distances_cm) // 10]:\n",
+    "for d in distances_cm[:: max(len(distances_cm) // 10, 1)]:\n",
     "    delta, d0 = get_deltas_from_global(0, d, mic_idx)\n",
-    "    delta_noisy, d0 = get_deltas_from_global(sigmas_yaw, d, mic_idx)\n",
+    "    delta_noisy, d0 = get_deltas_from_global(sigmas_angle, d, mic_idx)\n",
     "    sigmas_delta = 1e2 * abs(delta - delta_noisy)\n",
-    "    axs[0].plot(sigmas_yaw, sigmas_delta, label=f\"{d}cm\")\n",
+    "    axs[0].plot(sigmas_angle, sigmas_delta, label=f\"{d}cm\")\n",
     "axs[0].set_xlabel(\"$\\\\sigma_\\\\theta [deg]$\")\n",
     "axs[0].set_ylabel(\"$\\\\sigma_\\\\Delta [cm]$\")\n",
     "axs[0].legend(loc=\"upper left\", title=\"distance $d$\")\n",
     "\n",
-    "for yaw in azimuth_deg[:: len(azimuth_deg) // 10]:\n",
-    "    delta, d0 = get_deltas_from_global(yaw, 0, mic_idx)\n",
-    "    delta_noisy, d0 = get_deltas_from_global(yaw, sigmas_distance, mic_idx)\n",
+    "for angle in azimuth_deg[:: max(len(azimuth_deg) // 10, 1)]:\n",
+    "    delta, d0 = get_deltas_from_global(angle, distances_cm[0], mic_idx)\n",
+    "    delta_noisy, d0 = get_deltas_from_global(angle, sigmas_distance + distances_cm[0], mic_idx)\n",
     "    sigmas_delta = 1e2 * abs(delta - delta_noisy)\n",
-    "    axs[1].plot(sigmas_distance, sigmas_delta, label=f\"{yaw}deg\")\n",
+    "    axs[1].plot(sigmas_distance, sigmas_delta, label=f\"{angle}deg\")\n",
     "axs[1].set_xlabel(\"$\\\\sigma_d$ [cm]\")\n",
     "axs[1].legend(loc=\"upper left\", title=\"angle $\\\\theta$\")\n",
     "axs[1].set_ylim(-1, 45)\n",
