--- a/notebooks/WallStudy.ipynb
+++ b/notebooks/WallStudy.ipynb
@@ -64,7 +64,7 @@
     "    from plotting_tools import save_fig\n",
     "\n",
     "    def update_figure(slice_f, slice_d):\n",
-    "        fig, axs = plt.subplots(1, 2)\n",
+    "        fig, axs = plt.subplots(1, 2, sharey=True)\n",
     "        fig.set_size_inches(10, 5)\n",
     "        # axs[0].semilogy(distances, df_matrix[slice_f, :])\n",
     "        axs[0].plot(distances, df_matrix[slice_f, :])\n",
@@ -109,7 +109,7 @@
     "fig.set_size_inches(5 * len(angles), 5)\n",
     "for ax, angle in zip(axs.flatten(), angles):\n",
     "    room = generate_room(distance_cm=10, azimuth_deg=angle, ax=ax)\n",
-    "    ax.set_title(f\"yaw{angle}\")\n",
+    "    ax.set_title(f\"azimuth {angle}\")\n",
     "    ax.legend(loc=\"lower left\")"
    ]
   },
@@ -278,7 +278,7 @@
     "fig.set_size_inches(5, 5)\n",
     "im = ax.pcolorfast(dist, freq, df_matrix_theo[freq_start:freq_end, dist_start:dist_end])\n",
     "add_colorbar(fig, ax, im, title=\"amplitude [-]\")\n",
-    "ax.set_title(\"distance-frequency matrix for $\\\\theta=0$\")\n",
+    "ax.set_title(\"distance-frequency matrix for azimuth $\\\\theta=0$\")\n",
     "ax.axhline(start_freq, color=\"C1\", label=\"distance slice\")\n",
     "ax.axvline(start_dist, color=\"C8\", label=\"frequency slice\")\n",
     "ax.legend(framealpha=1.0)\n",
@@ -337,22 +337,26 @@
     "    deltas_cm=delta_max, azimuth_deg=0, mic_idx=mic_idx\n",
     ")\n",
     "print(\"max attainable distance:\", d)\n",
+    "size = (3, 5)\n",
     "\n",
     "distance_slices = [30, d, 80]\n",
-    "sigmas = [0] + list(np.logspace(-3, 0, 4))\n",
-    "#sigma_y = 1 # works with 1e-1, 1e-2: really good! with 1, it breaks down.\n",
+    "sigmas = [0, 0.01, 0.1, 0.2, 0.3] \n",
     "for sigma_y in sigmas:\n",
-    "    size = (5, 7)\n",
     "    fig_all, axs = plt.subplots(len(distance_slices), sharey=True, sharex=True)\n",
     "    axs[0].set_title(\"frequency slices at different distances ($\\\\theta$=0)\")\n",
     "    fig_all.set_size_inches(*size)\n",
+    "    \n",
+    "    \n",
+    "    fig, axs_dist = plt.subplots(1, len(distance_slices), sharey=True)\n",
+    "    fig.set_size_inches(size[0]*len(distance_slices), size[1])\n",
     "    for i, d in enumerate(distance_slices):\n",
     "        slice_cont = get_freq_slice_theory(distance_cm=d, frequencies=freq_cont)[:, mic_idx]\n",
     "        slice_f = get_freq_slice_theory(distance_cm=d, frequencies=freq)[:, mic_idx]\n",
     "\n",
     "        slice_f += np.random.normal(scale=sigma_y, size=len(slice_f))\n",
     "\n",
-    "        d_fft, p_fft, diff = get_probability_fft(slice_f, freq, n_max=n_max)\n",
+    "        #d_fft, p_fft, diff = get_probability_fft(slice_f, freq, n_max=n_max)\n",
+    "        \n",
     "        p_cost = get_probability_cost(slice_f, freq, distances_grid)\n",
     "        d_bayes_sigma, p_bayes_sigma, diff = get_probability_bayes(\n",
     "            slice_f, freq, n_max=n_max, sigma=sigma_y\n",
@@ -366,22 +370,19 @@
     "        axs[i].scatter(freq, slice_f, color=\"C0\")\n",
     "        axs[i].legend(loc=\"upper right\")\n",
     "\n",
-    "        fig = plt.figure()\n",
-    "        fig.set_size_inches(*size)\n",
-    "        plt.plot(d_fft, p_fft, marker=\"o\", label=\"FFT\")\n",
-    "        plt.plot(d_bayes, p_bayes, marker=\"x\", label=\"Bayes\")\n",
-    "        plt.plot(d_bayes_sigma, p_bayes_sigma, marker=\".\", label=\"Bayes, known sigma\")\n",
-    "        plt.plot(distances_grid, p_cost, marker=\"o\", label=\"optimization\")\n",
-    "        plt.axvline(d, ls=\":\", color=\"black\", label=\"real distance\")\n",
-    "        plt.title(f\"probabilities at distance {d:.0f}cm ($\\\\theta$=0)\")\n",
-    "        plt.ylabel(\"probability [-]\")\n",
-    "        plt.xlim(min(distances_grid), max(distances_grid))\n",
-    "        plt.legend(loc=\"lower right\")\n",
-    "        # plt.ylim(0, 1)\n",
-    "        plt.yscale(\"log\")\n",
-    "        plt.xlabel(\"orthogonal distance [cm]\")\n",
-    "        plt.ylim(1e-6, 1)\n",
-    "        save_fig(fig, f\"plots/simulation/study_fslice_{d:.0f}_{str(sigma_y).replace('.','-')}.pdf\")\n",
+    "        #plt.plot(d_fft, p_fft, marker=\"o\", label=\"FFT\")\n",
+    "        axs_dist[i].plot(d_bayes, p_bayes, marker=\"x\", label=\"Bayes\")\n",
+    "        axs_dist[i].plot(d_bayes_sigma, p_bayes_sigma, marker=\".\", label=\"Bayes, known sigma\")\n",
+    "        axs_dist[i].plot(distances_grid, p_cost, marker=\"o\", label=\"optimization\")\n",
+    "        axs_dist[i].axvline(d, ls=\":\", color=\"black\", label=\"real distance\")\n",
+    "        axs_dist[i].set_title(f\"distance {d:.0f}cm ($\\\\theta$=0)\")\n",
+    "        axs_dist[i].set_xlim(min(distances_grid), max(distances_grid))\n",
+    "        axs_dist[i].set_yscale(\"log\")\n",
+    "        axs_dist[i].set_xlabel(\"orthogonal distance [cm]\")\n",
+    "        axs_dist[i].set_ylim(1e-6, 1)\n",
+    "    axs_dist[0].legend(loc=\"lower right\")\n",
+    "    axs_dist[0].set_ylabel(\"probability [-]\")\n",
+    "    save_fig(fig, f\"plots/simulation/study_fslice_distances_{str(sigma_y).replace('.','-')}.pdf\")\n",
     "    axs[i].set_xlabel(\"frequency [Hz]\")\n",
     "    print(\"max distance\", d_fft[-1])\n",
     "    save_fig(fig_all, f\"plots/simulation/study_fslices_{str(sigma_y).replace('.','-')}.pdf\")"
@@ -403,7 +404,7 @@
     "from simulation import simulate_distance_estimator\n",
     "from estimators import get_estimate\n",
     "\n",
-    "azimuth_deg = 0\n",
+    "azimuth_deg = 180\n",
     "distance_cm = 20\n",
     "\n",
     "fig, ax = plt.subplots()\n",
@@ -420,7 +421,6 @@
     "\n",
     "ax_all.scatter(ds * 100, probs, label='all')\n",
     "ax_all.axvline(d * 100, color='k')\n",
-    "assert np.abs(d * 100 - distance_cm) <= 1, (distance_cm, d * 100)\n",
     "\n",
     "for mic in range(4):\n",
     "    distance_estimator = simulate_distance_estimator(\n",
@@ -435,6 +435,8 @@
     "ax_all.set_xlabel(\"wall distance [cm]\")\n",
     "ax_all.set_ylabel(\"probability [-]\")\n",
     "ax_all.legend()\n",
+    "#ax_all.set_yscale('log')\n",
+    "#ax_all.set_ylim(1e-10, 1)\n",
     "\n",
     "distance_estimator.context.plot(distance=distance_cm * 1e-2, azimuth_deg=azimuth_deg)"
    ]
@@ -648,7 +650,8 @@
     "n_methods = 2\n",
     "\n",
     "frequency = 3000\n",
-    "relative_distances_cm = np.arange(20, step=1.0)\n",
+    "rel_movement_cm = 1.0\n",
+    "relative_distances_cm = np.arange(20, step=rel_movement_cm)\n",
     "start_distance_cm = 50\n",
     "\n",
     "start_distances_grid = [start_distance_cm] #np.arange(40, 60)\n",
@@ -667,13 +670,15 @@
     "\n",
     "        slice_d = get_df_theory_simple(deltas_m, [frequency], flat=True, d0=d0)\n",
     "\n",
+    "        factor = factor_distance_to_delta(start_distance_cm, rel_movement_cm, mic_idx)\n",
+    "        print(factor)\n",
     "        ratios, probs = get_approach_angle_fft(\n",
     "            slice_d,\n",
     "            frequency,\n",
     "            relative_distances_cm,\n",
     "            n_max=n_max,\n",
     "        )\n",
-    "        gammas_deg, probs = get_gamma_distribution(ratios, probs)\n",
+    "        gammas_deg, probs = get_gamma_distribution(ratios, probs, factor=factor)\n",
     "        gamma_est = get_estimate(gammas_deg, probs)\n",
     "\n",
     "        ax.plot(\n",
@@ -705,8 +710,9 @@
     "mic_idx = 1\n",
     "n_methods = 2\n",
     "\n",
-    "gammas_deg = [90, 60, 30]\n",
-    "freqs = np.linspace(2000, 4000, 3)\n",
+    "gammas_deg = [30, 60, 90]\n",
+    "frequency = 4000\n",
+    "\n",
     "relative_distances_cm = np.arange(20, step=1.0)\n",
     "start_distance_cm = 50\n",
     "\n",
@@ -719,104 +725,95 @@
     "distances_max = np.linspace(start_distance_cm-max(relative_distances_cm), start_distance_cm, 100)\n",
     "deltas_max, d0 = get_deltas_from_global(azimuth_deg, distances_max, mic_idx)\n",
     "\n",
-    "sigma_y = 1e-2 #0 \n",
-    "for sigma_y in [0] + list(np.logspace(-3, 0, 4)):\n",
-    "    size = (5, 7)\n",
+    "sigmas = [0, 0.01, 0.1, 0.2, 0.3] \n",
+    "\n",
+    "size = (3, 5)\n",
+    "for sigma_y in sigmas:\n",
     "    fig_slices, ax_slices = plt.subplots(len(gammas_deg), sharex=True, sharey=True)\n",
     "    fig_slices.set_size_inches(*size)\n",
     "\n",
+    "    fig, axs_dist = plt.subplots(1, len(gammas_deg), sharey=True)\n",
+    "    fig.set_size_inches(size[0]*len(gammas_deg), size[1])\n",
     "    for i_gamma, gamma_deg in enumerate(gammas_deg):\n",
+    "        label = f\"$\\\\gamma$={gamma_deg}deg\"\n",
+    "        \n",
     "        distances_cm = start_distance_cm - relative_distances_cm * np.sin(\n",
     "            gamma_deg / 180 * np.pi\n",
     "        )\n",
     "        deltas_m, d0 = get_deltas_from_global(azimuth_deg, distances_cm, mic_idx)\n",
     "\n",
-    "        d_m = np.abs(np.mean(np.diff(distances_cm))) * 1e-2\n",
-    "        D_m = (np.max(distances_cm) - np.min(distances_cm)) * 1e-2\n",
-    "        print(f\"distances: {d_m:.3e} m, range: {D_m} m\")\n",
-    "        print(\n",
-    "            f\"usable freqs: {2*SPEED_OF_SOUND/D_m:.0f} - {SPEED_OF_SOUND/d_m:.0f} Hz\"\n",
+    "        #d_m = np.abs(np.mean(np.diff(distances_cm))) * 1e-2\n",
+    "        #D_m = (np.max(distances_cm) - np.min(distances_cm)) * 1e-2\n",
+    "        #print(f\"distances: {d_m:.3e} m, range: {D_m} m\")\n",
+    "        #print(\n",
+    "        #    f\"usable freqs: {2*SPEED_OF_SOUND/D_m:.0f} - {SPEED_OF_SOUND/d_m:.0f} Hz\"\n",
+    "        #)\n",
+    "        #print(\"ground truth:\", gamma_deg)\n",
+    "\n",
+    "        slice_d = get_df_theory_simple(deltas_m, [frequency], flat=True, d0=d0)\n",
+    "        slice_d += np.random.normal(scale=sigma_y, size=len(slice_d))\n",
+    "\n",
+    "        # plotting\n",
+    "        slice_cont = get_df_theory_simple(deltas_max, [frequency], flat=True, d0=d0)\n",
+    "        ax_slices[i_gamma].plot(deltas_max, slice_cont, color=f\"C0\")\n",
+    "        ax_slices[i_gamma].scatter(deltas_m, slice_d, label=label, color=f\"C0\")\n",
+    "\n",
+    "        gammas_bayes, probs_bayes = get_approach_angle_fft(\n",
+    "            slice_d,\n",
+    "            frequency,\n",
+    "            relative_distances_cm,\n",
+    "            n_max=n_max,\n",
+    "            bayes=True,\n",
+    "            sigma=None,\n",
+    "            reduced=True\n",
     "        )\n",
+    "        gammas_bayes_sigma, probs_bayes_sigma = get_approach_angle_fft(\n",
+    "            slice_d,\n",
+    "            frequency,\n",
+    "            relative_distances_cm,\n",
+    "            n_max=n_max,\n",
+    "            bayes=True,\n",
+    "            sigma=sigma_y,\n",
+    "            reduced=True\n",
+    "        )\n",
+    "        probs_cost = get_approach_angle_cost(\n",
+    "            slice_d,\n",
+    "            frequency,\n",
+    "            relative_distances_cm,\n",
+    "            start_distances_grid,\n",
+    "            gammas_grid,\n",
+    "            mic_idx=mic_idx,\n",
+    "            # ax=ax,\n",
+    "        )  # is of shape n_start_distances x n_gammas_grid\n",
     "\n",
-    "        print(\"ground truth:\", gamma_deg)\n",
-    "\n",
-    "\n",
-    "        for i_freq, frequency in enumerate(freqs):\n",
-    "            label = f\"$f$={frequency:.0f}Hz, $\\\\gamma$={gamma_deg}deg\"\n",
-    "            slice_d = get_df_theory_simple(deltas_m, [frequency], flat=True, d0=d0)\n",
-    "            slice_d += np.random.normal(scale=sigma_y, size=len(slice_d))\n",
-    "\n",
-    "            # plotting\n",
-    "            slice_cont = get_df_theory_simple(deltas_max, [frequency], flat=True, d0=d0)\n",
-    "            ax_slices[i_gamma].plot(deltas_max, slice_cont, color=f\"C{i_freq}\")\n",
-    "            ax_slices[i_gamma].scatter(deltas_m, slice_d, label=label, color=f\"C{i_freq}\")\n",
-    "\n",
-    "            gammas_bayes, probs_bayes = get_approach_angle_fft(\n",
-    "                slice_d,\n",
-    "                frequency,\n",
-    "                relative_distances_cm,\n",
-    "                n_max=n_max,\n",
-    "                bayes=True,\n",
-    "                sigma=None,\n",
-    "                reduced=True\n",
-    "            )\n",
-    "            gammas_bayes_sigma, probs_bayes_sigma = get_approach_angle_fft(\n",
-    "                slice_d,\n",
-    "                frequency,\n",
-    "                relative_distances_cm,\n",
-    "                n_max=n_max,\n",
-    "                bayes=True,\n",
-    "                sigma=sigma_y,\n",
-    "                reduced=True\n",
-    "            )\n",
-    "            gammas_fft, probs_fft = get_approach_angle_fft(\n",
-    "                slice_d,\n",
-    "                frequency,\n",
-    "                relative_distances_cm,\n",
-    "                n_max=n_max,\n",
-    "                bayes=False,\n",
-    "                sigma=sigma_y,\n",
-    "                reduced=True\n",
-    "            )\n",
-    "            probs_cost = get_approach_angle_cost(\n",
-    "                slice_d,\n",
-    "                frequency,\n",
-    "                relative_distances_cm,\n",
-    "                start_distances_grid,\n",
-    "                gammas_grid,\n",
-    "                mic_idx=mic_idx,\n",
-    "                # ax=ax,\n",
-    "            )  # is of shape n_start_distances x n_gammas_grid\n",
-    "\n",
-    "            #fig, ax = plt.subplots()\n",
-    "            #ax.pcolorfast(start_distances_grid, gammas_grid, probs_cost.T)\n",
-    "            #ax.set_xlabel(\"start distance [cm]\")\n",
-    "            #ax.set_ylabel(\"gamma [deg]\")\n",
-    "            #ax.set_title(\"cost\")\n",
-    "\n",
-    "            fig = plt.figure()\n",
-    "            fig.set_size_inches(*size)\n",
-    "            i = 0\n",
-    "            for method, gammas, probs in zip(\n",
-    "                [\"FFT\", \"optimization\", \"Bayes\", \"Bayes, known sigma\"],\n",
-    "                [gammas_fft, gammas_grid, gammas_bayes, gammas_bayes_sigma],\n",
-    "                [probs_fft, probs_cost, probs_bayes, probs_bayes_sigma],\n",
-    "            ):\n",
-    "                gamma_idx = np.argmax(probs)\n",
-    "                gamma_max = gammas[gamma_idx]\n",
-    "                plt.plot(gammas, probs, label=method, color=f\"C{i}\", marker=\"o\")\n",
-    "                plt.axvline(gamma_max, color=f\"C{i}\")\n",
-    "                i += 1\n",
-    "            plt.axvline(gamma_deg, color=\"black\", ls=\":\", label=\"real angle\")\n",
-    "            plt.yscale(\"log\")\n",
-    "            plt.title(\"probabilities for \" + label)\n",
-    "            plt.ylim(1e-4, 1)\n",
-    "            plt.legend(loc='upper right')\n",
-    "            plt.xlabel(\"approach angle $\\\\gamma$[deg]\")\n",
-    "            plt.ylabel(\"probability [-]\")\n",
-    "            save_fig(fig, f\"plots/simulation/study_dslice_{gamma_deg:.0f}_{frequency:.0f}_{str(sigma_y).replace('.','-')}.pdf\")\n",
-    "        ax_slices[i_gamma].legend(loc='upper left')\n",
-    "        ax_slices[i_gamma].set_ylabel(\"amplitude [-]\")\n",
+    "        #fig, ax = plt.subplots()\n",
+    "        #ax.pcolorfast(start_distances_grid, gammas_grid, probs_cost.T)\n",
+    "        #ax.set_xlabel(\"start distance [cm]\")\n",
+    "        #ax.set_ylabel(\"gamma [deg]\")\n",
+    "        #ax.set_title(\"cost\")\n",
+    "        i = 0\n",
+    "        for method, gammas, probs in zip(\n",
+    "            [\"optimization\", \"Bayes\", \"Bayes, known sigma\"],\n",
+    "            [gammas_grid, gammas_bayes, gammas_bayes_sigma],\n",
+    "            [probs_cost, probs_bayes, probs_bayes_sigma],\n",
+    "        ):\n",
+    "            gamma_idx = np.argmax(probs)\n",
+    "            gamma_max = gammas[gamma_idx]\n",
+    "            axs_dist[i_gamma].plot(gammas, probs, label=method, color=f\"C{i}\", marker=\"o\")\n",
+    "            axs_dist[i_gamma].axvline(gamma_max, color=f\"C{i}\")\n",
+    "            i += 1\n",
+    "        axs_dist[i_gamma].axvline(gamma_deg, color=\"black\", ls=\":\", label=\"real angle\")\n",
+    "        axs_dist[i_gamma].set_yscale(\"log\")\n",
+    "        axs_dist[i_gamma].set_title(label)\n",
+    "        axs_dist[i_gamma].set_ylim(1e-4, 1)\n",
+    "        axs_dist[i_gamma].set_xlabel(\"approach angle $\\\\gamma$[deg]\")\n",
+    "        \n",
+    "    axs_dist[0].legend(loc='upper right')\n",
+    "    axs_dist[0].set_ylabel(\"probability [-]\")\n",
+    "    save_fig(fig, f\"plots/simulation/study_dslice_gammas_{frequency:.0f}_{str(sigma_y).replace('.','-')}.pdf\")\n",
+    "    \n",
+    "    ax_slices[i_gamma].legend(loc='upper left')\n",
+    "    ax_slices[i_gamma].set_ylabel(\"amplitude [-]\")\n",
     "    ax_slices[-1].set_xlabel(\"path difference $\\\\Delta$ [m]\")\n",
     "    save_fig(fig_slices, f\"plots/simulation/study_dslices_{str(sigma_y).replace('.','-')}.pdf\")"
    ]
@@ -1315,7 +1312,7 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "# Geometry test"
+    "# Geometry tests"
    ]
   },
   {
@@ -1326,28 +1323,29 @@
    "source": [
     "from geometry import *\n",
     "\n",
-    "distance = 3\n",
+    "distance_cm = 200\n",
     "azimuth_deg = 70 #+ mic_idx * 90\n",
     "\n",
     "#context = Context.get_crazyflie_setup()\n",
     "context = Context.get_standard_setup()\n",
+    "print(context.mics)\n",
     "\n",
     "for mic_idx in range(4):\n",
     "    #azimuth_deg = 45 + mic_idx * 90\n",
     "    context.source = context.mics[mic_idx] * 2\n",
-    "    n = get_normal(distance, azimuth_deg)[:2]\n",
+    "    n = get_normal(distance_cm*1e-2, azimuth_deg)[:2]\n",
     "    \n",
     "    context.plot(normal=n)\n",
     "    \n",
-    "    delta = context.get_delta_from_normal(n, mic_idx)\n",
+    "    delta_m = context.get_delta(azimuth_deg, distance_cm, mic_idx)\n",
     "    \n",
-    "    distance_est = context.get_total_distance(delta, azimuth_deg, mic_idx)\n",
-    "    source_distance = context.get_source_distance(delta, azimuth_deg, mic_idx)\n",
-    "    azimuth_est = context.get_angles(delta, source_distance, mic_idx)\n",
-    "    print(azimuth_est)\n",
+    "    distance_est = context.get_total_distance(delta_m, azimuth_deg, mic_idx) * 100\n",
+    "    source_distance_m = context.get_source_distance(delta_m, azimuth_deg, mic_idx)\n",
+    "    azimuth_est = context.get_angles(delta_m, source_distance_m, mic_idx)\n",
+    "    \n",
     "    #assert delta_est == 2, delta_est\n",
     "    #assert source_distance == 1, source_distance\n",
-    "    np.testing.assert_allclose(distance_est, distance)\n",
+    "    np.testing.assert_allclose(distance_est, distance_cm)\n",
     "    assert azimuth_deg in azimuth_est, (azimuth_est, azimuth_deg)"
    ]
   },
