--- a/notebooks/WallAnalysis.ipynb
+++ b/notebooks/WallAnalysis.ipynb
@@ -196,6 +196,24 @@
     "        axs_f[0, m].legend(loc=\"upper right\")\n",
     "    return fig_f\n",
     "\n",
+    "def plot_slices(slice_exp, slice_the, dist):\n",
+    "    fig_f, axs_f = plt.subplots(1, slice_exp.shape[0], squeeze=False, sharey=True)\n",
+    "    fig_f.set_size_inches(10, 5)\n",
+    "    fig_f.suptitle(f\"Standardized distance slices, at frequency {f:.0f}Hz\")\n",
+    "    for m in range(slice_exp.shape[0]):\n",
+    "        slice_exp_norm = deepcopy(slice_exp[m])\n",
+    "        slice_the_norm = deepcopy(slice_the[m])\n",
+    "        slice_exp_norm -= np.mean(slice_exp_norm)\n",
+    "        slice_the_norm -= np.mean(slice_the_norm)\n",
+    "        slice_exp_norm /= np.std(slice_exp_norm)\n",
+    "        slice_the_norm /= np.std(slice_the_norm)\n",
+    "        \n",
+    "        axs_f[0, m].plot(dist, slice_the_norm, label=\"theoretical\")\n",
+    "        axs_f[0, m].plot(dist, slice_exp_norm, label=\"measured\")\n",
+    "        axs_f[0, m].set_title(f\"mic{m}\")\n",
+    "        axs_f[0, m].legend(loc=\"upper right\")\n",
+    "    return fig_f\n",
+    "\n",
     "valid_freqs = df_freq\n",
     "for i, f in enumerate(df_freq):\n",
     "    slice_exp = df_matrix[:, i, :]\n",
@@ -208,6 +226,13 @@
     "        slice_the=slice_the,\n",
     "        dist=df_dist,\n",
     "    )\n",
+    "    fig_d = plot_slices(\n",
+    "        slice_exp=slice_exp,\n",
+    "        slice_the=slice_the,\n",
+    "        dist=df_dist,\n",
+    "    )\n",
+    "    fname = f\"{exp_name}_{motors}\"\n",
+    "    save_fig(fig_d, f'{plot_dir}/{fname}_distance_slice_{f:.0f}.pdf')\n",
     "    break"
    ]
   },
@@ -230,6 +255,12 @@
     "from plotting_tools import plot_performance, save_fig\n",
     "from estimators import get_estimate\n",
     "from simulation import factor_distance_to_delta\n",
+    "\n",
+    "titles = {\n",
+    "    'cost': 'optimization-based method',\n",
+    "    'bayes': 'FFT-based method',\n",
+    "    'bayes-combination': 'Bayesian method'\n",
+    "}\n",
     "\n",
     "plot_slices = False #True\n",
     "\n",
@@ -302,6 +333,7 @@
     "    fname = f\"{exp_name}_{motors}\"\n",
     "    fig, axs = plot_performance(err_dict, xs=df_freq, \n",
     "               xlabel=\"frequency [Hz]\", ylabel=\"error [deg]\")\n",
+    "    fig.suptitle(titles[algo])\n",
     "    axs[0, 1].set_xlim(0,  90)\n",
     "    axs[0, 0].set_ylim(-90,  90)\n",
     "    save_fig(fig, f'{plot_dir}/{fname}_{algo}_distance_slice_performance.pdf')"
@@ -468,7 +500,7 @@
     "    ax.set_title(f\"{normalization}\")\n",
     "    ax.set_xlabel('distance [cm]')\n",
     "add_colorbar(fig, ax, im)\n",
-    "save_fig(fig, f\"plots/{fname}_matrices_mic{mic_idx}.png\")"
+    "save_fig(fig, f\"{plot_dir}/{fname}_matrices_mic{mic_idx}.png\")"
    ]
   },
   {
@@ -573,16 +605,16 @@
     "                        'algorithm': algo\n",
     "                    }\n",
     "                    \n",
-    "        #for method, distance_estimator in distance_estimators.items():\n",
-    "        #    distances_here, proba = distance_estimator.get_distance_distribution()\n",
-    "        #    d = get_estimate(distances_here, proba) * 1e2\n",
-    "        #    err_df.loc[len(err_df), :] = {\n",
-    "        #        'error': d - distance,\n",
-    "        #        'mic': 'all',\n",
-    "        #        'distance': distance,\n",
-    "        #        'method': method, \n",
-    "        #        'algorithm': 'bayes-combination' \n",
-    "        #    }"
+    "        for method, distance_estimator in distance_estimators.items():\n",
+    "            distances_here, proba = distance_estimator.get_distance_distribution()\n",
+    "            d = get_estimate(distances_here, proba) * 1e2\n",
+    "            err_df.loc[len(err_df), :] = {\n",
+    "                'error': d - distance,\n",
+    "                'mic': 'all',\n",
+    "                'distance': distance,\n",
+    "                'method': method, \n",
+    "                'algorithm': 'bayes-combination' \n",
+    "            }"
    ]
   },
   {
@@ -592,11 +624,6 @@
    "outputs": [],
    "source": [
     "from plotting_tools import plot_performance\n",
-    "titles = {\n",
-    "    'cost': 'optimization-based method',\n",
-    "    'bayes': 'FFT-based method',\n",
-    "    'bayes-combination': 'Bayesian method'\n",
-    "}\n",
     "err_df = err_df.apply(pd.to_numeric, axis=0, errors='ignore')\n",
     "\n",
     "fname = f\"{exp_name}_{motors}\"\n",
@@ -610,7 +637,7 @@
     "        fig.suptitle(f'microphone: {mic}, {titles[key]}')\n",
     "        axs[0, 1].set_xlim(-1, max(distances))\n",
     "        \n",
-    "        fname_here = f\"plots/{fname}_{key}_mic{mic}_frequency_performance.png\"\n",
+    "        fname_here = f\"{plot_dir}/{fname}_{key}_mic{mic}_frequency_performance.png\"\n",
     "        save_fig(fig, fname_here)"
    ]
   },
@@ -718,13 +745,13 @@
     "        \n",
     "\n",
     "    fname_here = f'{plot_dir}/{fname}_slice.png'\n",
-    "    save_fig(fig_slice, fname_here)\n",
+    "    #save_fig(fig_slice, fname_here)\n",
     "\n",
     "    for algo in algorithms:\n",
     "        axs_algos[algo][-1, -1].legend(loc='upper right')\n",
     "        #[ax.yaxis.set_major_formatter(FormatStrFormatter('%.1e')) for ax in axs_algos[algo][:, 0]]\n",
     "        fname_here = f'{plot_dir}/{fname}_{algo}.png'\n",
-    "        save_fig(fig_algos[algo], fname_here)"
+    "        #save_fig(fig_algos[algo], fname_here)"
    ]
   },
   {
@@ -752,7 +779,7 @@
     ")\n",
     "\n",
     "# found from below\n",
-    "plot_tuples = [(0, 3093), (0, 3218), (3, 3734)]\n",
+    "plot_tuples = [(0, 3093), (0, 4434), (0, 3605)]\n",
     "\n",
     "for i, (frequency, df_freq) in enumerate(wall_detector.df.groupby('frequency')):\n",
     "    \n",
@@ -762,7 +789,7 @@
     "    if len(distances) < len(all_distances): # only plot distances with \"full coverage\"\n",
     "        continue\n",
     "    \n",
-    "    slices_median, distances_median_all, mics, stds = wall_detector.get_distance_slice(frequency, method=np.nanmedian)\n",
+    "    slices_median, distances_median_all, mics, stds = wall_detector.get_distance_slice(frequency)\n",
     "    \n",
     "    # TODO: these don't make sense because they model the full oscillation\n",
     "    #print('stds:', stds)\n",
@@ -792,7 +819,7 @@
     "        mic_idx = int(mic)\n",
     "            \n",
     "        coeffs_raw, distances_raw, fit_raw, cost_raw =  wall_detector.fit_to_raw(frequency, mic_idx)\n",
-    "        coeffs_median, fit_median, distances_median, cost_median =  wall_detector.fit_to_median(frequency, mic_idx)\n",
+    "        coeffs_median, fit_median, distances_median, cost_median = wall_detector.fit_to_median(frequency, mic_idx)\n",
     "        \n",
     "        # find the sigma for this frequency (per distance)\n",
     "        alpha, phase, gain = coeffs_raw\n",
@@ -823,6 +850,7 @@
     "        )\n",
     "        \n",
     "        if (mic_idx, frequency) not in plot_tuples:\n",
+    "            print(mic_idx, frequency)\n",
     "            continue\n",
     "            \n",
     "        print(f'plotting: mic {mic}, frequency {frequency}, alpha={alpha:.2f}, gain={gain:.2f}')\n",
@@ -839,23 +867,23 @@
     "        ax_fit.plot(distances_raw, fit_raw, color='C2', label='fit to raw')\n",
     "        \n",
     "        ax_fit.plot(distances_median_all, slices_median[i_mic], color='C1', label='median')\n",
-    "        ax_fit.plot(distances_median, fit_median, color='C3', ls=':', label='fit to median')\n",
+    "        #ax_fit.plot(distances_median, fit_median, color='C3', ls=':', label='fit to median')\n",
     "        \n",
-    "        ax_fit.set_title(label)\n",
+    "        ax_fit.set_title('fit for ' + label)\n",
     "        ax_fit.set_ylabel('amplitude [-]')\n",
     "        ax_fit.set_xlabel('distance [cm]')\n",
-    "        ax_fit.legend(loc='upper right')\n",
+    "        ax_fit.legend(loc='lower left')\n",
     "        \n",
     "        ax_freq.scatter(std_series.index, std_series.values, label=f'std', color=f'C{i}')\n",
     "        #ax_freq.axhline(stds[i_mic], label=f'average std', color=f'C{i}')\n",
     "        ax_freq.axhline(std_average, label=f'average std', color=f'C{i}')\n",
-    "        ax_freq.semilogy(std_series.index, amps*0.5, ls=':', color=f'C{i}')\n",
+    "        #ax_freq.semilogy(std_series.index, amps*0.5, ls=':', color=f'C{i}')\n",
     "        ax_freq.semilogy(std_series.index, amps, ls=':', color=f'C{i}', label=f'amplitude')\n",
-    "        ax_freq.semilogy(std_series.index, amps*1.5, ls=':', color=f'C{i}')\n",
-    "        ax_freq.set_title(label)\n",
-    "        ax_freq.legend(loc='upper right')\n",
+    "        #ax_freq.semilogy(std_series.index, amps*1.5, ls=':', color=f'C{i}')\n",
+    "        ax_freq.set_title('magnitude vs. noise for ' + label)\n",
+    "        ax_freq.legend(loc='lower left')\n",
     "        ax_freq.set_xlabel('distance [cm]')\n",
-    "        ax_freq.set_ylabel('magnitude vs. std [-]')\n",
+    "        #ax_freq.set_ylabel('magnitude vs. std [-]')\n",
     "        \n",
     "        fname_here = f'{plot_dir}/{fname}_fitting_{frequency:.0f}_{mic_idx}.png'\n",
     "        save_fig(fig, fname_here)"
@@ -881,7 +909,7 @@
     "plt.ylabel('limit distance [cm]')\n",
     "plt.legend()\n",
     "fname_here = f'{plot_dir}/{fname}_limit_distance.png'\n",
-    "save_fig(fig, fname_here)\n"
+    "save_fig(fig, fname_here)"
    ]
   },
   {
@@ -919,102 +947,7 @@
     "    medians = df.groupby([\"mic\"]).offset.median()\n",
     "    [plt.axhline(m, color=palette[i], ls=ls[method]) for i, m in enumerate(medians)]\n",
     "    plt.plot([], [], color=\"black\", ls=ls[method], label=method)\n",
-    "plt.legend(loc=\"upper left\", bbox_to_anchor=[1, 1])\n",
-    "\n"
-   ]
-  },
-  {
-   "cell_type": "raw",
-   "metadata": {},
-   "source": [
-    "# old stuff"
-   ]
-  },
-  {
-   "cell_type": "raw",
-   "metadata": {},
-   "source": [
-    "from scipy.interpolate import UnivariateSpline, LSQUnivariateSpline\n",
-    "from numpy.polynomial import Chebyshev, Legendre, Polynomial, Laguerre\n",
-    "\n",
-    "spline_k = 2\n",
-    "spline_ext = 3\n",
-    "\n",
-    "for mic_idx in range(row.df_matrix.shape[0]):\n",
-    "    df_norm, values = normalize_df_matrix(\n",
-    "        df_matrix=row.df_matrix, freqs=row.df_freq, method=\"calibration-online\"\n",
-    "    )\n",
-    "\n",
-    "    df_norm, df_freq, indices = prune_df_matrix(df_norm, row.df_freq)\n",
-    "    values = values[:, indices]\n",
-    "\n",
-    "    xvalues = df_freq\n",
-    "    yvalues = np.log10(values[mic_idx, :, 0])\n",
-    "\n",
-    "    plt.figure()\n",
-    "    plt.plot(xvalues, yvalues, label=\"raw\", color=\"C0\", marker=\"*\")\n",
-    "    for i, poly in enumerate([Legendre]):  \n",
-    "        c = poly.fit(xvalues, yvalues, deg=10)\n",
-    "        x, y = c.linspace()\n",
-    "        plt.plot(x, y, label=poly.__name__, color=f\"C{i+1}\")\n",
-    "\n",
-    "    # spline = UnivariateSpline(xvalues, yvalues, k=2)\n",
-    "    # plt.plot(xvalues, spline(xvalues), label='Spline', color='C5')\n",
-    "\n",
-    "    knots = np.linspace(min(df_freq), max(df_freq), 7)[1:-1]\n",
-    "    spline = LSQUnivariateSpline(xvalues, yvalues, t=knots, k=spline_k, ext=spline_ext)\n",
-    "    plt.plot(xvalues, spline(xvalues), label=\"LSQSpline\", color=f\"C{i+2}\", marker=\"o\")\n",
-    "    [plt.axvline(k, color=f\"C{i+2}\") for k in knots]\n",
-    "    plt.legend()\n",
-    "    plt.title(f\"mic{mic_idx}\")"
-   ]
-  },
-  {
-   "cell_type": "raw",
-   "metadata": {},
-   "source": [
-    "def spline_interpolation(xvalues, df_matrix):\n",
-    "    \"\"\" Generate spline interpolation for all distances.\n",
-    "    \n",
-    "    :return calib_values: mics x freqs x distances, interpolated spline curve\n",
-    "    \"\"\"\n",
-    "    knots = np.linspace(min(df_freq), max(df_freq), 6)[1:-1]\n",
-    "    calib_values = np.empty_like(df_matrix)\n",
-    "    for i, dist in enumerate(row.df_dist):\n",
-    "        for m in range(df_matrix.shape[0]):\n",
-    "\n",
-    "            slice_f = np.log10(df_matrix[m, :, i])\n",
-    "            mask = ~np.isnan(slice_f)\n",
-    "\n",
-    "            spline = LSQUnivariateSpline(\n",
-    "                xvalues[mask], slice_f[mask], t=knots, k=spline_k, ext=spline_ext\n",
-    "            )\n",
-    "            calib_values[m, :, i] = 10 ** spline(xvalues)\n",
-    "    return calib_values\n",
-    "\n",
-    "\n",
-    "df_matrix, df_freq, __ = prune_df_matrix(row.df_matrix, row.df_freq)\n",
-    "calib_values = spline_interpolation(df_freq, df_matrix)\n",
-    "\n",
-    "fig, axs = plt.subplots(1, calib_values.shape[0], squeeze=False, sharey=True)\n",
-    "fig.set_size_inches(10, 5)\n",
-    "cmap = plt.get_cmap(\"inferno\")\n",
-    "for m in range(calib_values.shape[0]):\n",
-    "    for i, dist in enumerate(row.df_dist):\n",
-    "        axs[0, m].semilogy(\n",
-    "            df_freq, calib_values[m, :, i], color=cmap(i / len(row.df_dist))\n",
-    "        )\n",
-    "    axs[0, m].semilogy(\n",
-    "        df_freq, calib_values[m, :, 0], color=cmap(0), label=f\"{row.df_dist[0]}cm\"\n",
-    "    )\n",
-    "    axs[0, m].semilogy(\n",
-    "        df_freq,\n",
-    "        calib_values[m, :, i],\n",
-    "        color=cmap(i / len(row.df_dist)),\n",
-    "        label=f\"{row.df_dist[-1]}cm\",\n",
-    "    )\n",
-    "    axs[0, m].set_title(f\"mic{m}\")\n",
-    "    axs[0, m].legend(loc=\"lower right\")"
+    "plt.legend(loc=\"upper left\", bbox_to_anchor=[1, 1])"
    ]
   },
   {
