--- a/notebooks/WallStudy.ipynb
+++ b/notebooks/WallStudy.ipynb
@@ -368,7 +368,7 @@
     "        axs[i].set_ylabel(\"amplitude [-]\")\n",
     "        axs[i].plot(freq_cont, slice_cont, label=f\"{d:.0f}cm\", color=\"C0\")\n",
     "        axs[i].scatter(freq, slice_f, color=\"C0\")\n",
-    "        axs[i].legend(loc=\"upper right\")\n",
+    "        axs[i].legend(loc=\"upper left\")\n",
     "\n",
     "        #plt.plot(d_fft, p_fft, marker=\"o\", label=\"FFT\")\n",
     "        axs_dist[i].plot(d_bayes, p_bayes, marker=\"x\", label=\"Bayes\")\n",
@@ -380,11 +380,11 @@
     "        axs_dist[i].set_yscale(\"log\")\n",
     "        axs_dist[i].set_xlabel(\"orthogonal distance [cm]\")\n",
     "        axs_dist[i].set_ylim(1e-6, 1)\n",
-    "    axs_dist[0].legend(loc=\"lower right\")\n",
+    "    axs_dist[-1].legend(loc=\"upper left\", bbox_to_anchor=[1.0, 1.0])\n",
     "    axs_dist[0].set_ylabel(\"probability [-]\")\n",
     "    save_fig(fig, f\"plots/simulation/study_fslice_distances_{str(sigma_y).replace('.','-')}.pdf\")\n",
     "    axs[i].set_xlabel(\"frequency [Hz]\")\n",
-    "    print(\"max distance\", d_fft[-1])\n",
+    "    #print(\"max distance\", d_fft[-1])\n",
     "    save_fig(fig_all, f\"plots/simulation/study_fslices_{str(sigma_y).replace('.','-')}.pdf\")"
    ]
   },
@@ -646,13 +646,13 @@
    "source": [
     "from inference import get_approach_angle_fft, get_gamma_distribution\n",
     "from simulation import factor_distance_to_delta\n",
-    "azimuth_deg = 20\n",
+    "azimuth_deg = 0\n",
     "n_methods = 2\n",
     "\n",
     "frequency = 3000\n",
     "rel_movement_cm = 1.0\n",
     "relative_distances_cm = np.arange(20, step=rel_movement_cm)\n",
-    "start_distance_cm = 50\n",
+    "start_distance_cm = 30\n",
     "\n",
     "start_distances_grid = [start_distance_cm] #np.arange(40, 60)\n",
     "n_max = 1000\n",
@@ -661,17 +661,19 @@
     "    distances_cm = start_distance_cm - relative_distances_cm * np.sin(\n",
     "        gamma_deg / 180 * np.pi\n",
     "    )\n",
-    "\n",
     "    fig, ax = plt.subplots()\n",
     "    fig.set_size_inches(5, 5)\n",
     "\n",
+    "    print(f'angle {gamma_deg}: {min(distances_cm):.4f} to {max(distances_cm):.4f}')\n",
     "    for mic_idx in range(4):\n",
     "        deltas_m, d0 = get_deltas_from_global(azimuth_deg, distances_cm, mic_idx)\n",
     "\n",
     "        slice_d = get_df_theory_simple(deltas_m, [frequency], flat=True, d0=d0)\n",
     "\n",
-    "        factor = factor_distance_to_delta(start_distance_cm, rel_movement_cm, mic_idx)\n",
-    "        print(factor)\n",
+    "        factor_min = factor_distance_to_delta(max(distances_cm), rel_movement_cm, mic_idx, azimuth_deg)\n",
+    "        factor_max = factor_distance_to_delta(min(distances_cm), rel_movement_cm, mic_idx, azimuth_deg)\n",
+    "        print(f'mic{mic_idx}: factor {factor:.4f}, {factor_min:.4f} to {factor_max:.4f}')\n",
+    "        factor = (factor_max + factor_min)/2\n",
     "        ratios, probs = get_approach_angle_fft(\n",
     "            slice_d,\n",
     "            frequency,\n",
@@ -808,11 +810,12 @@
     "        axs_dist[i_gamma].set_ylim(1e-4, 1)\n",
     "        axs_dist[i_gamma].set_xlabel(\"approach angle $\\\\gamma$[deg]\")\n",
     "        \n",
-    "    axs_dist[0].legend(loc='upper right')\n",
+    "        ax_slices[i_gamma].legend(loc='upper left')\n",
+    "        \n",
+    "    axs_dist[-1].legend(loc=\"upper left\", bbox_to_anchor=[1.0, 1.0])\n",
     "    axs_dist[0].set_ylabel(\"probability [-]\")\n",
     "    save_fig(fig, f\"plots/simulation/study_dslice_gammas_{frequency:.0f}_{str(sigma_y).replace('.','-')}.pdf\")\n",
     "    \n",
-    "    ax_slices[i_gamma].legend(loc='upper left')\n",
     "    ax_slices[i_gamma].set_ylabel(\"amplitude [-]\")\n",
     "    ax_slices[-1].set_xlabel(\"path difference $\\\\Delta$ [m]\")\n",
     "    save_fig(fig_slices, f\"plots/simulation/study_dslices_{str(sigma_y).replace('.','-')}.pdf\")"
